# houston_project

./: .cursorignore  .cursorindexingignore  .dockerignore  .env.example  .env.shared-dev.example  .gitignore  AGENTS.md  INSTALL_MAC.md  Makefile  README.md  docker-compose.shared-dev.yml  docker-compose.yml  pyproject.toml
.cursor/: 000-core-always.mdc  100-backend-rules.mdc  200-frontend-rules.mdc
.cursor/commands/: api-contract-change.md  audit-mode.md  backend-fix.md  domain-lifecycle-change.md  event-driven.md  frontend-fix.md  implementation-mode.md  mobile-pwa-ui-change.md  rbac-scope-change.md  realtime-ws-change.md  review-before-commit.md  test-audit.md
.cursor/rules/: 000-project-contract.mdc  01-agent-guardrails.mdc  10-backend-django-drf.mdc  20-frontend-react-vite-ts.mdc  21-mobile-first-pwa.mdc  30-docker-orbstack.mdc  80-security-data-integrity.mdc  90-rule-authoring.mdc
.github/workflows/: ci.yml
apps/api/: AGENTS.md  celerybeat-schedule-shm  celerybeat-schedule-wal  schema.yml
apps/web/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
contracts/: operational-realtime-invalidation.json
docs/: 00_ai_documentation_policy.md  README.md
docs/architecture/: api_error_contract.md  authentication_charter.md  authentification_charter.md
docs/audit/: celery_reliability_matrix.md  chat_v1_technical_debt_2026-06-09.md  checklist_audit_2026-06-09.md  code_scalability_s0_2026-06-11.md  db_scalability_phase_l_2026-06-11.md  frontend_performance_phase_p_2026-06-11.md  pagination_audit_2026-06-13.md  phase_b_rbac_decisions_2026-06-11.md  phase_s1_debt_closure_2026-06-11.md
docs/audits/: action_audit.md  action_consolidation.md  ai_pipeline_audit.md  backend_core_architecture.md  checklist_audit.md  checklist_consolidation.md  execution_feed_audit.md  execution_feed_consolidation.md  feature_audit_closure.md  feature_audit_decisions.md  global_architecture_mapping.md  notifications_realtime_audit.md  notifications_realtime_consolidation.md  observation_audit.md  observation_refresh_audit.md  observation_refresh_consolidation.md  onboarding_audit.md  onboarding_observation_ai_consolidation.md  phase_2_api_openapi_audit.md  phase_2_api_openapi_consolidation.md  phase_2_audit_backlog.md  phase_2_celery_async_audit.md  phase_2_celery_async_consolidation.md  phase_2_ci_devex_docs_audit.md  phase_2_ci_devex_docs_consolidation.md  phase_2_database_orm_audit.md  phase_2_database_orm_consolidation.md  phase_2_final_roadmap.md  phase_2_frontend_architecture_audit.md  phase_2_frontend_architecture_consolidation.md  phase_2_pwa_mobile_first_audit.md  phase_2_pwa_mobile_first_consolidation.md  phase_2_realtime_event_driven_audit.md  phase_2_realtime_event_driven_consolidation.md  phase_2_tanstack_query_cache_audit.md  phase_2_tanstack_query_cache_consolidation.md  phase_2_test_strategy_audit.md  phase_2_test_strategy_consolidation.md  rbac_security_audit.md  signal_feed_audit.md  (+2 more)
docs/catalogue/: activity_subjects.csv  arborescence.csv  business_units.csv  catalogue_target.md  suggestion_source.csv
docs/codex/: phase_0_1_foundations.md  phase_0_2_foundation_hardening.md  phase_0_5_web_auth_foundation.md  phase_0_7_phase_0_closure_gate.md
docs/engineering/: api_pagination_standard.md  shared_dev_database.md  (+2 more)
(+1006 files in other folders)
