[project]
name = "houston"
version = "0.1.0"
description = "Houston Phase 0.1 foundations"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
    "celery>=5.5,<6",
    "channels>=4.2,<5",
    "channels-redis>=4.2,<5",
    "django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "drf-spectacular>=0.28,<0.29",
    "psycopg[binary]>=3.2,<4",
    "redis>=6.2,<7",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-django>=4.11,<5",
    "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["apps/api/houston/core/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
