[project]
name = "houston"
version = "0.1.0"
description = "Houston Phase 0.1 foundations"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "celery>=5.5,<6",
    "channels>=4.2,<5",
    "channels-redis>=4.2,<5",
    "daphne>=4.1,<5",
    "django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "drf-spectacular>=0.28,<0.29",
    "pydantic>=2.11,<3",
    "psycopg[binary]>=3.2,<4",
    "redis>=6.2,<7",
    "openai>=1.0,<2",
    "pillow>=11.0,<12",
    "pillow-heif>=0.21,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-django>=4.11,<5",
    "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["apps/api/houston"]
addopts = "-ra"
markers = [
    "openai_smoke: opt-in live OpenAI onboarding test (requires HOUSTON_RUN_OPENAI_SMOKE_TEST=1)",
    "openai_observation_smoke: opt-in live OpenAI observation pipeline test (requires HOUSTON_RUN_OPENAI_OBSERVATION_SMOKE_TEST=1)",
    "allow_openai_observation_propose: test may call OpenAIObservationPipelineProvider.propose (e.g. missing API key guard test)",
    "openai_transcription_smoke: opt-in live OpenAI transcription test",
    "slow: tests over 1s or explicit sleep",
    "auth_throttle: tests that assert real rate-limit behavior (429); excluded from relaxed-throttle fixture",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "I001"]
